--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/speed-insights": "^1.2.0",
     "firebase": "^12.4.0",
+    "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
@@ -33,6 +36,7 @@
     "tsx": "^4.20.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-compression2": "^2.3.1"
   }
 }
